<resources>
    <string name="app_name">Salão Cleide</string>
    <string name="txtLogin">Login</string>
    <string name="edtCodUser">Usuário</string>
    <string name="edtVazio" />
    <string name="edtPswUser">Senha</string>
    <string name="btnActLoginAcessar">Acessar</string>
    <string name="txtServico">Cadastre o Serviço</string>
    <string name="txtCliente">Escolha o Cliente:</string>
    <string name="txtCadServico">Escolha o Serviço:</string>
    <string name="txtPreco">Digite o Preço:</string>
    <string name="edtHintPreco">R$</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="txtConsultaServico">Consulte os Serviços:</string>
    <string name="txtData">Escolha o dia:</string>
    <string name="edtHintData">Digite a data Corretamente</string>
    <string name="action_add">+ Serviço</string>
    <string name="action_addCliente">+ Cliente</string>
    <string name="txtAddCliente">Cadastre o Cliente</string>
    <string name="edtAddCliente">Digite o Nome</string>
    <string name="edtTelefone">Digite o Telefone</string>
    <string name="retonar">Retornar</string>
    <string name="txtAddSerico">Cadastre Serviços</string>
    <string name="edtNomeServicoHint">Nome do Serviço</string>
    <string name="btnConsultarSrev">Consultar Serviços</string>
</resources>
