<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actLogin">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtCodUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/edtCodUser"
        android:inputType="number"
        android:text="@string/edtVazio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogin"
        android:importantForAutofill="no" tools:targetApi="o" />

    <EditText
        android:id="@+id/edtPswUser"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/edtPswUser"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:text="@string/edtVazio"
        app:layout_constraintEnd_toEndOf="@+id/edtCodUser"
        app:layout_constraintStart_toStartOf="@+id/edtCodUser"
        app:layout_constraintTop_toBottomOf="@+id/edtCodUser" tools:targetApi="o" />

    <Button
        android:id="@+id/btnAcessar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnActLoginAcessar"
        app:layout_constraintEnd_toEndOf="@+id/edtPswUser"
        app:layout_constraintStart_toStartOf="@+id/edtPswUser"
        app:layout_constraintTop_toBottomOf="@+id/edtPswUser"
        android:onClick="Acessar"
        />

</android.support.constraint.ConstraintLayout>